--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -127,6 +127,7 @@
 
 
     <LinearLayout
+        android:id="@+id/fragmentDetails_linearLayout_addProgram"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
