--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -25,6 +25,10 @@
         <argument android:name="selectedLessonID"
             app:argType="string"
             app:nullable="true" />
+        <argument
+            android:name="belowProgramID"
+            app:argType="string"
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/addProgramFragment"
@@ -36,6 +40,14 @@
             app:destination="@id/detailsFragment" />
         <argument
             android:name="selectedTimeID"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="belowLessonID"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="belowProgramID"
             app:argType="string"
             app:nullable="true" />
     </fragment>
