--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -16,8 +16,7 @@
             app:destination="@id/manageProgramFragment" />
         <argument
             android:name="programID"
-            app:argType="string"
-            app:nullable="true" />
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/detailsFragment"
