--- a/app/src/main/res/layout/fragment_manage_program_recycler_row.xml
+++ b/app/src/main/res/layout/fragment_manage_program_recycler_row.xml
@@ -1,23 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_margin="10dp"
     android:layout_height="wrap_content">
 
 
-    <TextView
-        android:id="@+id/fragmentAddProg_recyclerRow_progName"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="ProgramName"
-        android:textSize="28sp"/>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_weight="7"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/fragmentAddProg_recyclerRow_progName"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="ProgramName"
+            android:textSize="28sp"/>
 
-    <TextView
-        android:id="@+id/fragmentAddProg_recyclerRow_dateAdded"
-        android:layout_width="match_parent"
+        <TextView
+            android:layout_marginTop="3dp"
+            android:id="@+id/fragmentAddProg_recyclerRow_dateAdded"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="DateAdded"
+            android:textSize="18sp"/>
+    </LinearLayout>
+
+
+    <ImageView
+        android:id="@+id/fragmentProgManage_recyclerRow_edit"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:text="DateAdded"
-        android:textSize="20sp"/>
+        android:src="@drawable/ic_baseline_arrow_right_24"
+        android:background="@null"
+        android:layout_weight="1"/>
 
 </LinearLayout>
