--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -56,6 +56,36 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/fragmentDetails_linearLayout_saveChangedCheck"
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/blue1"
+        android:padding="10dp">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:text="Degisiklikleri kaydet"/>
+        <ImageView
+            android:id="@+id/saveChanged"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_check_24"/>
+        <ImageView
+            android:id="@+id/cancelChanged"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/ic_baseline_clear_24"/>
+
+    </LinearLayout>
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -144,12 +174,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <ProgressBar
-            android:id="@+id/detailsLoadingProgressBar"
-            android:layout_gravity="center"
-            android:layout_marginTop="100dp"
-            android:layout_width="50dp"
-            android:layout_height="50dp"/>
+<!--        <ProgressBar-->
+<!--            android:id="@+id/detailsLoadingProgressBar"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_marginTop="100dp"-->
+<!--            android:layout_width="50dp"-->
+<!--            android:layout_height="50dp"/>-->
 
         <LinearLayout
             android:id="@+id/details_errorText"
