--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -106,6 +106,8 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/fragmentDetails_editText_lessonName"
                 android:layout_width="match_parent"
+                android:inputType="none"
+                android:focusable="false"
                 android:layout_height="wrap_content" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -124,6 +126,8 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/fragmentDetails_editText_lecturerName"
                 android:layout_width="match_parent"
+                android:inputType="none"
+                android:focusable="false"
                 android:layout_height="wrap_content" />
 
         </com.google.android.material.textfield.TextInputLayout>
